# eva-vm

./: .gitignore  CMakeLists.txt  README.md  eva-grammar.bnf  generate-parser.sh  opcodes.md
src/disassemble/: disasm.cpp  eva_disassembler.h
src/parser/: eva_parser.h
src/vm/: eva_collector.h  eva_compiler.h  evavalue.cpp  evavalue.h  evavm.h  globals.h  logger.h  main.cpp  opcodes.h  test.cpp
